--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -7,211 +7,250 @@
 @import "fontello/index";
 
 p {
-  font-size: em(16px);
+	font-size: em(16px);
 }
 
 .vertical-text {
-  writing-mode: vertical-rl;
-  transform: rotateZ(180deg);
+	writing-mode: vertical-rl;
+	transform: rotateZ(180deg);
 }
 
 .align-middle {
-  vertical-align: middle !important;
+	vertical-align: middle !important;
 }
 
 .vertical-line {
-  width: rem(4px);
-  min-height: 100%;
-  height: 100%;
-  margin: 0 auto;
-  position: relative;
-  top: rem(-58px);
-  z-index: 1;
+	width: rem(4px);
+	min-height: 100%;
+	height: 100%;
+	margin: 0 auto;
+	position: relative;
+	top: rem(-58px);
+	z-index: 1;
 }
 
 .block-icon {
-  position: relative;
-  margin: 0 auto;
-  width: rem(60px);
-  height: rem(60px);
-  font-size: em(30px);
-  line-height: rem(50px);
-  z-index: 3;
+	position: relative;
+	margin: 0 auto;
+	width: rem(60px);
+	height: rem(60px);
+	font-size: em(30px);
+	line-height: rem(50px);
+	z-index: 3;
 }
 
 .max-w-none {
-  max-width: none;
+	max-width: none;
 }
 
 .w-100 {
-  width: 100%;
+	width: 100%;
 }
 
 .min-h-100 {
-  min-height: 100%;
+	min-height: 100%;
 }
 
 .w-60 {
-  width: rem(60px);
-  max-width: rem(60px);
+	width: rem(60px);
+	max-width: rem(60px);
 }
 
 .lh-1 {
-  line-height: 1;
+	line-height: 1;
 }
 
 .border-0 {
-  border: none !important;
+	border: none !important;
 }
 
 .font-10 {
-  font-size: em(10px);
+	font-size: em(10px);
 }
 
 .font-12 {
-  font-size: em(12px);
+	font-size: em(12px);
 }
 
 .font-14 {
-  font-size: em(14px);
+	font-size: em(14px);
 }
 
 .font-16 {
-  font-size: em(16px);
+	font-size: em(16px);
 }
 
 .font-18 {
-  font-size: em(18px);
+	font-size: em(18px);
 }
 
 .font-20 {
-  font-size: em(20px);
+	font-size: em(20px);
 }
 .font-24 {
-  font-size: em(24px);
+	font-size: em(24px);
 }
 
 .main-container {
-  //min-width: 1000px;
+	//min-width: 1000px;
 
-  & > .row {
-    &:first-child {
-      margin-top: 0;
-    }
+	& > .row {
+		&:first-child {
+			margin-top: 0;
+		}
 
-    margin-top: -1px;
-  }
+		margin-top: -1px;
+	}
 }
 
 .rating {
-  display: block;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  white-space: nowrap;
-  width: rem(150px);
+	display: block;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	white-space: nowrap;
+	width: rem(150px);
 
-  input {
-    display: none;
+	input {
+		display: none;
 
-    &:checked ~ label.full {
-      background: #009688;
-    }
-  }
+		&:checked ~ label.full {
+			background: #009688;
+		}
+	}
 
-  label.full {
-    display: inline-block;
-    float: right;
-    margin: 0;
-    padding: 0;
-    border: 0;
-    white-space: nowrap;
+	label.full {
+		display: inline-block;
+		float: right;
+		margin: 0;
+		padding: 0;
+		border: 0;
+		white-space: nowrap;
 
-    border-radius: 50%;
+		border-radius: 50%;
 
-    width: rem(20px);
-    height: rem(20px);
-    background: #455a64;
+		width: rem(20px);
+		height: rem(20px);
+		background: #455a64;
 
-    margin-right: rem(10px);
+		margin-right: rem(10px);
 
-    &:first-of-type {
-      margin-right: 0;
-    }
-  }
+		&:first-of-type {
+			margin-right: 0;
+		}
+	}
 }
 
 .table-skills {
-  tr,
-  td,
-  th {
-    border: 0;
-  }
+	tr,
+	td,
+	th {
+		border: 0;
+	}
 
-  th {
-    font-weight: 400;
-  }
+	th {
+		font-weight: 400;
+	}
 
-  tr {
-    &:first-child {
-      th,
-      td {
-        padding-top: 0;
-      }
-    }
-  }
+	tr {
+		&:first-child {
+			th,
+			td {
+				padding-top: 0;
+			}
+		}
+	}
 
-  td,
-  th {
-    padding-bottom: rem(10px);
-    padding-top: rem(10px);
-  }
+	td,
+	th {
+		padding-bottom: rem(10px);
+		padding-top: rem(10px);
+	}
 }
 
 ul.description-as-bullet-list {
-  list-style: disc;
-  padding-left: 15px;
-  li {
-    list-style: disc;
-    p {
-      margin-top: 3px;
-      margin-bottom: 3px;
-    }
-  }
+	list-style: disc;
+	padding-left: 15px;
+	li {
+		list-style: disc;
+		p {
+			margin-top: 3px;
+			margin-bottom: 3px;
+		}
+	}
 }
 
 .contact-info-box {
-  padding-left: 4.5rem;
+	padding-left: 4.5rem;
 
-  @media all and (max-width: 992px) {
-    & {
-      padding-left: 3rem;
-    }
-  }
+	@media all and (max-width: 992px) {
+		& {
+			padding-left: 3rem;
+		}
+	}
 
-  @media all and (max-width: 768px) {
-    & {
-      padding-left: 0;
-    }
-  }
+	@media all and (max-width: 768px) {
+		& {
+			padding-left: 0;
+			.collection-item {
+				padding: 0.5rem !important;
+			}
+		}
+	}
 }
 
 @media print {
-  @page {
-    size: 350mm; /* landscape */
-    /* you can also specify margins here: */
-    //margin: 25mm;
-    //margin-right: 45mm; /* for compatibility with both A4 and Letter */
-  }
+	@page {
+		size: 350mm; /* landscape */
+		/* you can also specify margins here: */
+		//margin: 25mm;
+		//margin-right: 45mm; /* for compatibility with both A4 and Letter */
+	}
 
-  .container {
-    display: block !important;
-    max-width: 1440px !important;
-    width: 1440px !important;
-    margin: 0 !important;
-  }
+	.container {
+		display: block !important;
+		max-width: 1440px !important;
+		width: 1440px !important;
+		margin: 0 !important;
+	}
 
-  .pdf-page-break-1 {
-    padding-top: 20px !important;
-  }
+	.pdf-page-break-1 {
+		padding-top: 20px !important;
+	}
+}
+
+@media (max-width: 767.98px) {
+	.font-20 {
+		font-size: em(16px) !important;
+	}
+	.font-18 {
+		font-size: em(14px) !important;
+	}
+	.font-16 {
+		font-size: em(14px) !important;
+	}
+	.font-24 {
+		font-size: em(20px) !important;
+	}
+	.block-icon {
+		width: rem(40px) !important;
+		height: rem(40px) !important;
+		font-size: em(20px) !important;
+		line-height: rem(40px) !important;
+	}
+	.vertical-line {
+		width: rem(2px) !important;
+	}
+	.w-60 {
+		width: rem(40px) !important;
+		max-width: rem(40px) !important;
+	}
+	.rating {
+		width: rem(100px) !important;
+		label.full {
+			width: rem(15px) !important;
+			height: rem(15px) !important;
+			margin-right: rem(5px) !important;
+		}
+	}
 }
